--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@typeform/embed-react": "^2.4.0",
     "axios": "^0.27.2",
     "firebase": "^9.11.0",
     "form-data": "^4.0.0",
     "framer-motion": "^7.5.2",
     "jsonwebtoken": "^8.5.1",
-    "next": "12.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-outside-click-handler": "^1.3.0",
     "react-phone-number-input": "^3.2.8",
     "react-toastify": "^9.1.1",
