--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "firebase": "^9.11.0",
     "form-data": "^4.0.0",
     "framer-motion": "^7.5.2",
-    "jsonwebtoken": "^8.5.1",
+    "jose": "^4.13.1",
+    "js-cookie": "^3.0.1",
     "next": "^13.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
