--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^0.27.2",
     "firebase": "^9.11.0",
     "form-data": "^4.0.0",
@@ -20,7 +21,10 @@
     "react-dom": "^18.2.0",
     "react-outside-click-handler": "^1.3.0",
     "react-phone-number-input": "^3.2.8",
+    "react-redux": "^8.1.2",
     "react-toastify": "^9.1.1",
+    "redux-logger": "^3.0.6",
+    "socket.io-client": "^4.7.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
