--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^0.27.2",
+    "countries-list": "^3.1.1",
     "firebase": "^9.11.0",
     "form-data": "^4.0.0",
     "framer-motion": "^7.5.2",
