--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-phone-number-input": "^3.2.8",
     "react-redux": "^8.1.2",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.3",
     "redux-logger": "^3.0.6",
     "uuid": "^9.0.0"
   },
