--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Next.js to AWS
+name: Amplify CI
 on:
   push:
     branches: [main]
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment:
-      name: ${{ github.ref == 'refs/heads/main' && 'production' || 'beta' }}
+      name: 'production'
     
     steps:
       - uses: actions/checkout@v3
@@ -38,15 +38,23 @@ jobs:
 
         run: npm run build
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: Comment with Amplify URL on PR
+        if: success() && github.event_name == 'pull_request'
+        uses: actions/github-script@v7
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Deploy to production and invalidate
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: |
-          aws s3 sync ./dist s3://${{ secrets.S3_BUCKET }}
-          aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const core = require('@actions/core');
+            const branchName = `${{ github.head_ref }}`.replace(/[^a-zA-Z0-9-]/g, '-').toLowerCase();
+            const appId = '${{ secrets.AMPLIFY_APP_ID }}';
+            if (!appId) {
+              core.info('Amplify App ID is not set. Skipping comment.');
+              return;
+            }
+            const url = `https://${branchName}.${appId}.amplifyapp.com`;
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `Amplify preview deployment is available at: ${url}`
+            });
